--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ViewProtocol.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ViewProtocol.fxml
@@ -11,16 +11,16 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderPaneMenu" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.HomeScreenController">
+<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.Controller">
    <top>
-      <HBox alignment="TOP_RIGHT" minHeight="80.0" BorderPane.alignment="CENTER">
+      <HBox alignment="TOP_RIGHT" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true" />
             <VBox alignment="TOP_RIGHT">
                <children>
-                  <Label text="%lbl.loggedInAs" />
                   <Label text="Label" />
-                  <Button mnemonicParsing="false" text="%btn.logout" />
+                  <Label text="Label" />
+                  <Button mnemonicParsing="false" text="Button" />
                </children>
                <HBox.margin>
                   <Insets right="8.0" top="8.0" />
@@ -30,7 +30,7 @@
       </HBox>
    </top>
    <center>
-      <GridPane fx:id="gridPane" prefHeight="400.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+      <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -40,19 +40,16 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Label text="main" />
-         </children>
       </GridPane>
    </center>
    <left>
-      <VBox spacing="8.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="newProtocolBtn" mnemonicParsing="false" onAction="#openNewProtocol" prefHeight="80.0" prefWidth="200.0" text="%btn.newProtocol" />
-            <Button fx:id="protocolOverviewBtn" mnemonicParsing="false" onAction="#openProtocolOverview2" prefHeight="80.0" prefWidth="200.0" text="%btn.protocolOverview" />
-            <Button fx:id="createQueryBtn" mnemonicParsing="false" onAction="#openCreatQuery" prefHeight="80.0" prefWidth="200.0" text="%btn.createQuery" />
-            <Button fx:id="expandOntologyBtn" mnemonicParsing="false" onAction="#openExpandOntology" prefHeight="80.0" prefWidth="200.0" text="%btn.expandOntology" />
-            <Button fx:id="settingsBtn" mnemonicParsing="false" onAction="#openSettings" prefHeight="80.0" prefWidth="200.0" text="%btn.settings" />
+            <Button fx:id="newProtocolBtn" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" text="%btn.newProtocol" />
+            <Button fx:id="protocolOverviewBtn" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" />
+            <Button fx:id="createQueryBtn" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" />
+            <Button fx:id="expandOntologyBtn" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" />
+            <Button fx:id="settingsBtn" mnemonicParsing="false" prefHeight="80.0" prefWidth="200.0" />
          </children>
       </VBox>
    </left>
