--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/RecordDocument_PatientData.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/RecordDocument_PatientData.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.RecordDocumentPatientDataController">
    <left>
       <VBox alignment="CENTER" prefHeight="600.0" prefWidth="216.0" BorderPane.alignment="CENTER">
          <children>
@@ -75,7 +75,7 @@
                               <Insets left="10.0" right="10.0" />
                            </padding>
                         </Label>
-                        <TextField prefHeight="25.0" prefWidth="209.0" />
+                        <TextField fx:id="caseNrTF" prefHeight="25.0" prefWidth="209.0" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -160,7 +160,7 @@
                               <Insets right="10.0" />
                            </padding>
                         </Label>
-                        <TextField prefWidth="200.0" />
+                        <TextField fx:id="surnameTF" prefWidth="200.0" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -226,6 +226,11 @@
                            </padding>
                         </Label>
                         <ComboBox prefWidth="150.0" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#savePatientnext" text="Next" />
                      </children>
                   </HBox>
                </children>
