--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ProtocolOverview.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ProtocolOverview.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -30,8 +31,8 @@
                   <Insets left="8.0" />
                </padding>
             </Label>
-            <TextField />
-            <TextField fx:id="TBDtestTF" />
+            <TextField fx:id="searchTF" />
+            <ChoiceBox fx:id="columnSelectChoiceBox" prefWidth="150.0" />
             <Button fx:id="searchBtn" mnemonicParsing="false" onAction="#test" text="Button" />
          </children>
          <opaqueInsets>
