--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/RecordDocument_PatientData.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/RecordDocument_PatientData.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -123,7 +122,7 @@
                   <Insets left="-50.0" right="30.0" />
                </padding>
             </Label>
-            <JFXComboBox fx:id="diagnosisCB" prefWidth="150.0" />
+            <ComboBox fx:id="diagnosisCB" prefWidth="150.0" />
          </children>
          <padding>
             <Insets right="-40.0" />
